--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
   "name": "PocketPlans",
   "short_name": "PocketPlans",
+  "description": "Organize your future purchases with PocketPlans. Track items, prices, and priorities offline.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#eff6ff",
   "theme_color": "#3b82f6",
   "orientation": "portrait",
+  "categories": ["productivity", "finance", "lifestyle"],
   "icons": [
     {
       "src": "https://img.icons8.com/fluency/192/shopping-basket.png",
@@ -16,6 +18,22 @@
       "src": "https://img.icons8.com/fluency/512/shopping-basket.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "https://images.unsplash.com/photo-1554224155-6726b3ff858f?auto=format&fit=crop&q=80&w=300&h=600",
+      "sizes": "300x600",
+      "type": "image/jpg",
+      "form_factor": "narrow",
+      "label": "List your wishes"
+    },
+    {
+      "src": "https://images.unsplash.com/photo-1607082348824-0a96f2a4b9da?auto=format&fit=crop&q=80&w=300&h=600",
+      "sizes": "300x600",
+      "type": "image/jpg",
+      "form_factor": "narrow",
+      "label": "Track your spending"
     }
   ]
 }
